bk_ida/gccida/g1/expand_call
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2536:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *imag; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2546:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2553:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *type; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2559:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2560:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2561:5: error: expected ';' after expression
tree rttree; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2561:6: error: use of undeclared identifier 'rttree'; did you mean 'tree'?
tree rttree; // rbx 
     ^~~~~~
     tree
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2560:12: note: 'tree' declared here
tree_node *tree; // rax 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2569:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2570:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v37; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2571:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2579:5: error: expected ';' after expression
tree v46; // rdi 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2579:6: error: use of undeclared identifier 'v46'
tree v46; // rdi 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2593:5: error: expected ';' after expression
tree v60; // rcx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2593:6: error: use of undeclared identifier 'v60'
tree v60; // rcx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2599:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree_value; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2604:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2624:4: error: expected ';' after expression
rtx v91; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2624:5: error: use of undeclared identifier 'v91'
rtx v91; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/calls.c:2625:4: error: expected ';' after expression
rtx v92; // r13 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_call/src/obj/calls.o] Error 1
